test/errors/indexed_offsets_error/zs/varuint_offset_array_error.zs
package varuint_offset_array_error;

struct VaruintOffsetArrayError
{
    varuint offsets[10];
offsets[@index]:
    int32   fields[10];
};
